# tree-sitter-sfapex

./: .gitignore  Cargo.toml  README.md  binding.gyp  nvim-treesitter-setup.md  package-lock.json  package.json  tree-sitter.json
.github/workflows/: publish-release.yml  test.yml
apex/: grammar.js  package-lock.json  package.json  tree-sitter.json
apex/queries/: highlights.scm
apex/src/: grammar.json  node-types.json  parser.c
apex/test/corpus/: annotations.txt  anonymous.txt  class.txt  comments.txt  constructor.txt  control.txt  dml_keywords.txt  enums.txt  exceptions.txt  expressions.txt  instanceof.txt  methods.txt  operators.txt  properties.txt  queries.txt  switch.txt  triggers.txt  variables.txt
apexanon/: grammar.js  package-lock.json  package.json
apexanon/queries/: highlights.scm
apexcode/: example-file  grammar.js  package.json
apexcode/queries/: highlights.scm
bindings/node/: apex.js  apexanon.js  binding.cc  index.d.ts  index.js  sflog.js
bindings/rust/: build.rs  lib.rs
bindings/web/: README.md  index.d.ts  index.js  package-lock.json  package.json
common/: common.js  soql-grammar.js  sosl-grammar.js
docs/playground/: index.html
sflog/: grammar.js  package.json  tree-sitter.json
sflog/queries/: highlights.scm
sflog/src/: grammar.json  node-types.json  parser.c
soql/: grammar.js  package-lock.json  package.json  tree-sitter.json
soql/queries/: highlights.scm
soql/src/: grammar.json  node-types.json  parser.c
sosl/: grammar.js  package.json  tree-sitter.json
sosl/src/: grammar.json  node-types.json  parser.c
(+33 files in other folders)
