[package]
name = "tree-sitter-sfapex"
description = "Salesforce Apex, SOQL, SOQL, and Log grammars for tree-sitter"
version = "2.4.0"
authors = ["Anthony Heber <anthony@heber.dev>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "salesforce", "apex"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/aheber/tree-sitter-sfapex"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "apex/grammar.js",
  "apex/src",
  "apex/queries",
  "soql/grammar.js",
  "soql/src",
  "soql/queries",
  "sosl/grammar.js",
  "sosl/src",
  "sosl/queries",
  "sflog/grammar.js",
  "sflog/src",
  "sflog/queries",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
